--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,5 +4,7 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html"
-  }
+  },
+  "permissions": ["scripting", "identity"],
+  "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'"
 }
