--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,6 +5,13 @@
   "action": {
     "default_popup": "index.html"
   },
-  "permissions": ["scripting", "identity"],
-  "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'"
+  "permissions": [
+    "scripting",
+    "identity",
+    "tabs",
+    "webNavigation",
+    "tabs",
+    "storage",
+    "activeTab"
+  ]
 }
