--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,8 +12,11 @@
     "webNavigation",
     "tabs",
     "storage",
-    "activeTab"
+    "activeTab",
+    "identity",
+    "https://*.firebaseapp.com/"
   ],
+
   "content_security_policy": {
     "extension_pages": "default-src 'self'; script-src 'self' 'wasm-unsafe-eval' ; script-src-elem 'self' *;connect-src * data: blob: filesystem:;",
     "sandbox": "sandbox allow-scripts; script-src 'self' * "
